--- a/ML.ipynb
+++ b/ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "5089e18d-1e5b-4e74-a4ff-d54e1827b59d",
    "metadata": {},
    "outputs": [],
@@ -20,38 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "458397f8-a268-46ff-b627-76314141734b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv(\"pdb_data_no_dups.csv\")\n",
-    "df2 = pd.read_csv(\"pdb_data_seq.csv\")"
+    "df = pd.read_csv(\"filtered_dataset.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3fd0d06c-2265-44d8-8723-e70421d6ab6b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Keep only the required columns & rename ===\n",
-    "df1_filtered = df1[[\"structureId\", \"classification\", \"macromoleculeType\", \"residueCount\", \"resolution\"]]\n",
-    "df1_filtered = df1_filtered.rename(columns={\n",
-    "    \"residueCount\": \"residueCount_df1\",\n",
-    "    \"macromoleculeType\": \"macromoleculeType_df1\"\n",
-    "})\n",
-    "\n",
-    "df2_filtered = df2[[\"structureId\", \"sequence\", \"residueCount\"]]\n",
-    "df2_filtered = df2_filtered.rename(columns={\n",
-    "    \"residueCount\": \"residueCount_df2\"\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "fea5fb78-46a6-4492-91fc-ac4fcc95b3e2",
    "metadata": {},
    "outputs": [
@@ -64,17 +43,14 @@
     }
    ],
    "source": [
-    "# === Merge on structureId ===\n",
-    "merged_df = pd.merge(df1_filtered, df2_filtered, on=\"structureId\", how=\"inner\")\n",
-    "\n",
     "# === Drop duplicate sequences ===\n",
-    "merged_df = merged_df.drop_duplicates(subset=\"sequence\")\n",
+    "df = df.drop_duplicates(subset=\"sequence\")\n",
     "\n",
     "# Drop rows where any column has a missing value\n",
-    "merged_df = merged_df.dropna()\n",
+    "df = df.dropna()\n",
     "\n",
     "# === Save the final filtered dataset ===\n",
-    "merged_df.to_csv(\"filtered_dataset.csv\", index=False)\n",
+    "df.to_csv(\"filtered_dataset.csv\", index=False)\n",
     "\n",
     "print(f\"Filtered dataset saved as filtered_dataset.csv with {len(merged_df)} rows.\")"
    ]
