--- a/ML.ipynb
+++ b/ML.ipynb
@@ -52,7 +52,7 @@
     "# === Save the final filtered dataset ===\n",
     "df.to_csv(\"filtered_dataset.csv\", index=False)\n",
     "\n",
-    "print(f\"Filtered dataset saved as filtered_dataset.csv with {len(merged_df)} rows.\")"
+    "print(f\"Filtered dataset saved as filtered_dataset.csv with {len(df)} rows.\")"
    ]
   },
   {
@@ -66,9 +66,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
